Add citations in the introduction

--- a/macros.tex
+++ b/macros.tex
@@ -64,6 +64,7 @@
 % misc operators
 \newcommand{\trcls}{+}  % transitive closure
 \renewcommand{\cite}{\parencite}
+\renewcommand{\cites}{\parencites}
 
 % logical symbols
 \newcommand{\limplies}{\rightarrow}
