--- a/references.bib
+++ b/references.bib
@@ -168,7 +168,7 @@ series = {AAMAS '21}
 	Booktitle = {Handbook of Computational Social Choice},
 	Chapter = {2},
 	Edition = {1st},
-	Editor = {Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, J{\'e}r\^{o}me and Procaccia, Ariel D.},
+	Editor = {Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, J{\'e}r\^{o}me and Procaccia, Ariel},
 	Publisher = {Cambridge University Press},
 	Title = {Introduction to the Theory of Voting},
 	Year = {2016}}
@@ -179,7 +179,7 @@ series = {AAMAS '21}
 	Booktitle = {Handbook of Computational Social Choice},
 	Chapter = {17},
 	Edition = {1st},
-	Editor = {Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, J{\'e}r\^{o}me and Procaccia, Ariel D.},
+	Editor = {Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, J{\'e}r\^{o}me and Procaccia, Ariel},
 	Publisher = {Cambridge University Press},
 	Title = {Judgment Aggregation},
 	Year = {2016}}
@@ -190,18 +190,18 @@ series = {AAMAS '21}
 	Booktitle = {Handbook of Computational Social Choice},
 	Chapter = {6},
 	Edition = {1st},
-	Editor = {Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, J{\'e}r\^{o}me and Procaccia, Ariel D.},
+	Editor = {Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, J{\'e}r\^{o}me and Procaccia, Ariel},
 	Publisher = {Cambridge University Press},
 	Title = {Barriers to Manipulation in Voting},
 	Year = {2016}}
 
 @incollection{brandt2016introduction,
 	Address = {New York, NY, USA},
-	Author = {Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, J{\'e}r\^{o}me and Procaccia, Ariel D.},
+	Author = {Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, J{\'e}r\^{o}me and Procaccia, Ariel},
 	Booktitle = {Handbook of Computational Social Choice},
 	Chapter = {1},
 	Edition = {1st},
-	Editor = {Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, J{\'e}r\^{o}me and Procaccia, Ariel D.},
+	Editor = {Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, J{\'e}r\^{o}me and Procaccia, Ariel},
 	Publisher = {Cambridge University Press},
 	Title = {Introduction to Computational Social Choice},
 	Year = {2016}}
@@ -669,7 +669,6 @@ series = {AAMAS '21}
 	type = {Technical {Report}},
 	title = {The {PageRank} {Citation} {Ranking}: {Bringing} {Order} to the {Web}.},
 	url = {http://ilpubs.stanford.edu:8090/422/},
-	abstract = {The importance of a Web page is an inherently subjective matter, which depends on the readers interests, knowledge and attitudes. But there is still much that can be said objectively about the relative importance of Web pages. This paper describes PageRank, a mathod for rating Web pages objectively and mechanically, effectively measuring the human interest and attention devoted to them. We compare PageRank to an idealized random Web surfer. We show how to efficiently compute PageRank for large numbers of pages. And, we show how to apply PageRank to search and to user navigation.},
 	number = {1999-66},
 	institution = {Stanford InfoLab},
 	author = {Page, Lawrence and Brin, Sergey and Motwani, Rajeev and Winograd, Terry},
@@ -772,7 +771,7 @@ series = {AAMAS '21}
     author={Brandt, Felix and Brill, Markus and Harrenstein, Paul and Moulin,
     Hervé},
     editor={Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang,
-    Jérôme and Procaccia, Ariel D.},
+    Jérôme and Procaccia, Ariel},
     year={2016},
     pages={57–84}
 }
@@ -912,7 +911,7 @@ Carlos M. da Fonseca and Slobodan K. Simi{\'c} and Dejan V. To{\v s}i{\'c}",
     publisher={Cambridge University Press},
     author={Elkind, Edith and Slinko, Arkadii},
     editor={Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang,
-    Jérôme and Procaccia, Ariel D.},
+    Jérôme and Procaccia, Ariel},
     year={2016},
     pages={169-196}
 }
@@ -1652,7 +1651,7 @@ pages="50--65",
     title={Handbook of Computational Social Choice},
     DOI={10.1017/CBO9781107446984},
     publisher={Cambridge University Press},
-    editor={Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, Jérôme and Procaccia, Ariel D.Editors},
+    editor={Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, Jérôme and Procaccia, Ariel},
     year={2016}
 }
 
@@ -1888,3 +1887,35 @@ pages="50--65",
   year={2020}
 }
 
+@InCollection{goranko_temporal,
+	author       =	{Goranko, Valentin and Rumberg, Antje},
+	title        =	{{Temporal Logic}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/sum2022/entries/logic-temporal/}},
+	year         =	{2022},
+	edition      =	{{S}ummer 2022},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
+@InCollection{mcnama_deontic,
+	author       =	{McNamara, Paul and Van De Putte, Frederik},
+	title        =	{{Deontic Logic}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta and Uri Nodelman},
+	howpublished =	{\url{https://plato.stanford.edu/archives/fall2022/entries/logic-deontic/}},
+	year         =	{2022},
+	edition      =	{{F}all 2022},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
+@InCollection{rendsvig_epistemic,
+	author       =	{Rendsvig, Rasmus and Symons, John},
+	title        =	{{Epistemic Logic}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/sum2021/entries/logic-epistemic/}},
+	year         =	{2021},
+	edition      =	{{S}ummer 2021},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
