contributions in the introduction

--- a/macros.tex
+++ b/macros.tex
@@ -70,3 +70,5 @@
 \newcommand{\limplies}{\rightarrow}
 \newcommand{\liff}{\leftrightarrow}
 \newcommand{\limpliedby}{\leftarrow}
+
+\newcommand{\complexityclass}[1]{\textsf{#1}}
