Draft of conclusion

--- a/macros.tex
+++ b/macros.tex
@@ -57,6 +57,9 @@
 \crefname{claim}{Claim}{Claims}
 \Crefname{claim}{Claim}{Claims}
 
+% override the name for page number references
+\Crefname{page}{p.}{p.}
+
 % greek letters
 \renewcommand{\phi}{\varphi}
 \renewcommand{\epsilon}{\varepsilon}
