introduction and conclusion fiddling

--- a/references.bib
+++ b/references.bib
@@ -1919,3 +1919,17 @@ pages="50--65",
 	edition      =	{{S}ummer 2021},
 	publisher    =	{Metaphysics Research Lab, Stanford University}
 }
+
+@article{sakama_formal_2014,
+	title = {A Formal Account of Dishonesty},
+	volume = {23},
+	issn = {1367-0751},
+	url = {https://doi.org/10.1093/jigpal/jzu043},
+	doi = {10.1093/jigpal/jzu043},
+	number = {2},
+	journal = {Logic Journal of the IGPL},
+	author = {Sakama, Chiaki and Caminada, Martin and Herzig, Andreas},
+	year = {2014},
+	pages = {259--294},
+}
+
