--- a/macros.tex
+++ b/macros.tex
@@ -3,7 +3,7 @@
     {\begingroup \color{violet}}
     {\endgroup}
 
-\newcommand{\todo}[1]{{\color{red}[\textbf{TODO:} {#1}]}}
+% \newcommand{\todo}[1]{{\color{red}[\textbf{TODO:} {#1}]}}
 
 % maths environments
 \theoremstyle{plain}\newtheorem{example}{Example}[section]
