start frontmatter numbering on abstract page

--- a/main.tex
+++ b/main.tex
@@ -112,14 +112,17 @@
 
     \clearpage
 
-    % abstract
-    \begin{abstract}
-        \input{abstract.tex}
-    \end{abstract}
-
 \end{titlingpage}
 
 \frontmatter
+
+\begin{abstract}
+    \thispagestyle{plain}
+    \input{abstract.tex}
+\end{abstract}
+
+\newpage
+
 \tableofcontents
 
 \clearpage
