add acks and date on cover page

--- a/main.tex
+++ b/main.tex
@@ -107,7 +107,7 @@
         {\LARGE Joseph Singleton}
         \par
         \vspace{10cm}
-        {\Large XXX 2022}
+        {\Large November 2022}
     \end{center}
 
     \clearpage
