--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,1 +1,7 @@
-\lipsum[2]
+I would like to first thank my supervisor Dr.\ Richard Booth for his enthusiasm
+and guidance throughout this project. It's been a real pleasure to work
+together. I thank my parents Lucy and Stephen for their continued support, and
+my brother Ivan for helping me practise my conference talks. I'd like to also
+thank my fellow students at Cardiff -- especially my office-mates Aric and
+Mohammed -- for their company as I wrote this thesis. Finally, thanks to Scott
+for being here throughout.
