Add list of tables and list of figures

--- a/main.tex
+++ b/main.tex
@@ -124,16 +124,21 @@
 \newpage
 
 \tableofcontents
-
 \clearpage
 
-\chapter*{Acknowledgements}
-\addcontentsline{toc}{chapter}{Acknowledgements}
-\input{acknowledgements.tex}
+\listoffigures
+\clearpage
+
+\listoftables
+\clearpage
 
 \chapter*{List of Publications}
 \addcontentsline{toc}{chapter}{List of Publications}
 \input{publications.tex}
+
+\chapter*{Acknowledgements}
+\addcontentsline{toc}{chapter}{Acknowledgements}
+\input{acknowledgements.tex}
 
 \mainmatter
 \input{body.tex}
