--- a/viva/main.tex
+++ b/viva/main.tex
@@ -55,7 +55,6 @@
               computational social choice theory
           \item We develop an axiomatic framework for \alert{truth discovery}
               and \alert{bipartite tournament ranking}
-        \item Axioms formalise ``desirable'' properties for a method
         \item Axiomatic analysis complements empirical work for comparing and
               developing new methods
     \end{itemize}
@@ -171,8 +170,7 @@
         \item We augment the belief change problem with notions of
               truth-tracking from formal learning theory
         \item This shows what can be learned in principle with non-experts
-        \item Even with strong assumptions, there are fundamental limits on
-              what one can learn
+        \item Even with strong assumptions, there are fundamental limits
     \end{itemize}
 \end{frame}
 
