--- a/publications.tex
+++ b/publications.tex
@@ -1,5 +1,4 @@
-The content of this thesis is derived from the following publications and
-manuscripts under review.
+The content of this thesis is derived from the following publications.
 
 \paragraph{\cref{chapter_td}.}
 \begin{itemize}
