--- a/references.bib
+++ b/references.bib
@@ -35,12 +35,13 @@ series = {AAMAS '21}
       journal={ESSLLI 2021 Student Session},
 }
 
-@unpublished{singleton2022expetise,
+@article{singleton2022expetise,
     title={Expertise and information: an epistemic logic perspective},
     author={Joseph Singleton and Richard Booth},
     year={2022},
-    pubstate={submitted},
+    journal={Synthese},
     sorttitle={a},
+    note={To appear.},
 }
 
 @article{singleton2022towards,
