Update Synthese reference and add URLs to my other bib entries

--- a/references.bib
+++ b/references.bib
@@ -9,7 +9,8 @@ pages = {2011–2013},
 numpages = {3},
 keywords = {social choice theory, trust and reputation, axioms, truth discovery},
 location = {Virtual Event},
-series = {AAMAS ’20}
+series = {AAMAS ’20},
+url = {https://www.ifaamas.org/Proceedings/aamas2020/pdfs/p2011.pdf},
 }
 
 @inproceedings{singleton_booth_bipartite,
@@ -23,7 +24,8 @@ pages = {1236–1244},
 numpages = {9},
 keywords = {chain graphs, social choice, ranking, tournaments},
 location = {Virtual Event},
-series = {AAMAS '21}
+series = {AAMAS '21},
+url = {https://www.ifaamas.org/Proceedings/aamas2021/pdfs/p1236.pdf},
 }
 
 @article{singleton2021logic,
@@ -38,10 +40,12 @@ series = {AAMAS '21}
 @article{singleton2022expetise,
     title={Expertise and information: an epistemic logic perspective},
     author={Joseph Singleton and Richard Booth},
-    year={2022},
     journal={Synthese},
-    sorttitle={a},
-    note={To appear.},
+    volume={201},
+    number={2},
+    year={2023},
+    publisher={Springer},
+    url={https://doi.org/10.1007/s11229-023-04064-y},
 }
 
 @article{singleton2022towards,
@@ -54,6 +58,7 @@ series = {AAMAS '21}
   year={2022},
   publisher={Springer},
   sorttitle={b},
+  url={https://doi.org/10.1007/s10458-022-09569-3},
 }
 
 @inproceedings{singleton_booth_22,
@@ -62,7 +67,6 @@ series = {AAMAS '21}
     booktitle = {{Proceedings of the 19th International Conference on Principles of Knowledge Representation and Reasoning}},
     pages     = {331--340},
     year      = {2022},
-    doi       = {10.24963/kr.2022/33},
     url       = {https://doi.org/10.24963/kr.2022/33},
     sorttitle = {c},
 }
